--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ body {
     color: #5900FF;
 }
 
-.right-button a {
+.leverege-button a {
     background: #5900FF;
     color: white;
     padding: 12px 24px;
@@ -58,8 +58,133 @@ body {
     border-radius: 25px;
 }
 
-.right-button:hover a {
+.leverege-button:hover a {
     background-color: #F5F5F5;
     color: #5900FF;
     border: 1px solid #5900FF;
+}
+
+/* Banner */
+.banner {
+    padding: 80px 0;
+}
+
+.banner-flex {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.b-left {
+    width: 50%;
+}
+
+.b-right {
+    width: 50%;
+}
+
+.b-right h1 {
+    font-size: 96px;
+    line-height: 1.4;
+    margin-bottom: 30px;
+}
+
+.social {
+    padding: 80px 0 80px;
+    background-color: #EEEEEE;
+
+}
+
+.social-items {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    row-gap: 40px;
+    column-gap: 40px;
+}
+
+.social-item {
+    text-align: center;
+    background: #EEEEEE;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    border-radius: 7px;
+    padding: 30px 20px 40px;
+}
+
+.social-item:hover {
+    background-color: #F5F5F5;
+}
+
+.social-item i {
+    color: #5900FF;
+    font-size: 48px;
+    margin-bottom: 20px;
+}
+
+.social-item h2 {
+    font-size: 28px;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+
+.social-item p {
+    font-size: 18px;
+    line-height: 1.5;
+}
+
+.about {
+    padding: 80px 0;
+}
+
+.a-flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 120px;
+}
+
+.left-content h3 {
+    font-size: 64px;
+    font-weight: 500;
+    margin-bottom: 25px;
+}
+
+.left-content p {
+    font-size: 18px;
+    line-height: 1.6;
+    margin-bottom: 40px;
+}
+
+.gallery {
+    padding: 60px 0 60px;
+    background-color: #EEEEEE;
+}
+
+.gallery h4 {
+    text-align: center;
+    font-size: 48px;
+    margin-bottom: 40px;
+}
+
+.gallery-grid {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    row-gap: 20px;
+}
+
+.gallery-grid img {
+    width: 360px;
+    border-radius: 2px;
+}
+
+footer {
+    text-align: center;
+    padding: 60px 0 60px;
+    background-color: black;
+}
+
+footer p {
+    color: white;
+    font-size: 54px;
+    letter-spacing: 2px;
+    margin-bottom: 25px;
 }
